removed non-root .ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 syncignore.txt
 VarPro_resnet/cifar10_data/*
 VarPro_resnet/mnist_data/*
+
+# Ignore all Jupyter Notebook files except the root one
+**/*.ipynb
+!/*.ipynb
