--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ VarPro_resnet/mnist_data/*
 2TS_ReLU_1d_entropy/
 
 # Ignore all Jupyter Notebook files except the root one
-**/*.ipynb
-!/*.ipynb
+*.ipynb
+!VarPro_ReLU_1d/Results_SHL.ipynb
 VarPro_ReLU_1d/Experiment_test.py
