--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ VarPro_resnet/mnist_data/*
 !VarPro_ReLU_1d/Results_SHL.ipynb
 !VarPro_ReLU_1d/1d_animations.ipynb
 !VarPro_resnet/Results_resnet.ipynb
+!VarPro_convolution_2d/Results_convolution.ipynb
